# judges-conflicts

./: .gitignore  README.md  pyproject.toml
code/: 00_financial_dis.ipynb  01_persons_positions.ipynb
data/persons_positions/: data.txt  judges_positions_v1.csv  judges_positions_v2.csv  judges_positions_v3.csv  judges_positions_v4.csv  judges_positions_v5.csv  judges_positions_v5.xlsm
scripts/analysis/: 00_01_00_eda_persons_positions.ipynb  00_01_fin_dis_sample_creation.ipynb  00_01_fin_dis_string_manip.ipynb  00_02_fin_dis_conflict_pipeline.ipynb  00_02_fin_dis_conflict_pipeline_cosim.ipynb  00_02_fin_dis_conflict_pipeline_lev_jaro.ipynb  00_03_02_conflict_extract_investment_dfs.ipynb  00_03_fin_disc_govt_db_check.ipynb  00_financial_disclosures.ipynb  00_persons_positions.ipynb  01_00_00_create_sample_disclosures.ipynb  01_persons_education.ipynb  01_persons_positions.ipynb  02_00_00_matching_onsample_lev_jaro.ipynb  02_00_01_matching_onsample_cosim.ipynb  02_00_dockets_eda.ipynb  02_01_dockets_combine_csvs.ipynb  02_dockets.ipynb  03_00_00_macthing_fullset_extract_docket_dfs.ipynb  03_01_00_matching_fullset_extract_investment_dfs.ipynb  04_00_00_matching_fullsample_create_investment_list.ipynb  04_01_00_matching_fullsample_create_docket_party_list.ipynb  dockets_missing_judges_sample.csv  dockets_sample.csv  dockets_with_judges_sample.csv  naming_convention.txt  people_coverage_across_sources.csv  people_disc_pos_dates.csv  positions_grouped.csv  sample.csv  specific_disc_sample.csv  specific_disc_sample_14469.csv  temp.csv  top_matches_all.csv
(+19 files in other folders)
