[tool.poetry]
name = "judges-conflicts"
version = "0.1.0"
description = ""
authors = ["eshanprashar <eshanprashar@uchicago.edu>"]
readme = "README.md"
packages = [{include = "judges_conflicts"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
matplotlib = "^3.9.2"
numpy = "^2.0.1"
ipykernel = "^6.29.5"
wordcloud = "^1.9.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
