[tool.poetry]
name = "judges-conflicts"
version = "0.1.0"
description = ""
authors = ["eshanprashar <eshanprashar@uchicago.edu>"]
readme = "README.md"
packages = [{include = "judges_conflicts"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
matplotlib = "^3.9.2"
numpy = "^2.0.1"
ipykernel = "^6.29.5"
wordcloud = "^1.9.3"
seaborn = "^0.13.2"
requests = "^2.32.3"
dask = "^2024.8.2"
dask-expr = "^1.1.12"
json-logger = "^0.0.1"
python-dotenv = "^1.0.1"
black = "^24.8.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.26.0"
transformers = "^4.45.2"
torch = "^2.4.1"
ipywidgets = "^8.1.5"
jellyfish = "^1.1.0"
scikit-learn = "^1.5.2"
openpyxl = "^3.1.5"
selenium = "^4.25.0"
rapidfuzz = "^3.10.1"
geopandas = "^1.0.1"
shapely = "^2.0.6"
h3 = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
